# dspy-mostly-harmless-code

./: .gitignore  README.md  run_all_tests.py
ch01_dont_panic/: .env.example  pyproject.toml  startup_roaster.py  test_startup_roaster.py
ch02_restaurant_pipeline/: lead_engine.py  pyproject.toml  test_all_chapter_examples.py  test_lead_engine.py
ch03_retrieval/: babel_fish.py  codebase_qa.py  pyproject.toml  test_all_chapter_examples.py
ch03_retrieval/test_babel_fish_index/: config.json  corpus_embeddings.npy
ch04_babel_fish/: .env.example  pyproject.toml  test_all_chapter_examples.py  ticket_classifier.py
ch05_agents/: pyproject.toml  research_agent.py  test_agent.json  test_all_chapter_examples.py
ch06_production/: content_moderator.py  pyproject.toml  test_all_chapter_examples.py
ch07_advanced/: multimodal_analyzer.py  pyproject.toml  test_all_chapter_examples.py
ch08_rlm/: contract_engine.py  pyproject.toml  test_contract_engine.py
