[tool.poetry]
name = "ch05-agents"
version = "0.1.0"
description = "Chapter 5: So Long, and Thanks for All the Prompts"
authors = ["Ali Raza <ali@botterfly.app>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
dspy = ">=3.1.3,<4.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
requests = ">=2.31.0,<3.0.0"
beautifulsoup4 = ">=4.12.0,<5.0.0"
duckduckgo-search = ">=8.0.0,<9.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
