[tool.poetry]
name = "ch06-production"
version = "0.1.0"
description = "Chapter 6: Mostly Harmless (in Production)"
authors = ["Ali Raza <ali@botterfly.app>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
dspy = ">=3.1.3,<4.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = ">=0.34.0,<1.0.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
