[tool.poetry]
name = "ch07-advanced"
version = "0.1.0"
description = "Chapter 7: The Answer Is 42 (Tokens) — Advanced Patterns and Multimodal"
authors = ["Ali Raza <ali@botterfly.app>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
dspy = ">=3.1.3,<4.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
Pillow = ">=11.0.0,<12.0.0"
requests = ">=2.32.0,<3.0.0"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
